[tool.poetry]
name = "drmhbot"
version = "0.1.0"
description = ""
authors = ["Julia <juliariety@gmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
python-telegram-bot = "^13.11"
redis = "^4.3.1"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
